# traffic-intersections-camera-installation-helper

./: README.md
a1/: .gitignore for ece650-python  a1ece650.py  command_parser.py  graph.py  graph_generator.py  intersect.py  street_db.py
a2/: .gitignore  CMakeLists.txt  Graph.cpp  Graph.hpp  check.sh  ece650-a2.cpp  test.cpp
a2/sample_error/: sample_error1.txt
a2/sample_input/: input1.txt
a2/sample_output/: sample_output1.txt
a3/: .gitignore  CMakeLists.txt  Graph.cpp  Point.cpp  Point.hpp  SegUtility.cpp  SegUtility.hpp  Segment.hpp  command_parser.py  ece650-a1.py  ece650-a2.cpp  ece650-a3  ece650-a3.cpp  exec.sh  graph.py  graph_generator.py  intersect.cpp  rgen.cpp  street_db.py  user.yml
a4/: .gitignore  CMakeLists.txt  Graph.cpp  Graph.hpp  ece650-a4.cpp  user.yml  validate.sh
a4/sample-input/: my-graphs.in  simple.in
a4/sample-output/: my-graphs.out  simple.out
final/Question17/: CMakeLists.txt  q17.cpp  q17.hpp
final/Question18/: CMakeLists.txt  q18.cpp
final/Question19/: q19.txt
project/: .gitignore  CMakeLists.txt  ece650-prj.cpp  exec.sh  user.yml  validate.sh  vertex_cover.cpp  vertex_cover.hpp
project/sample-input/: instruction.in  simple.in  various_size.in
project/sample-output/: instruction.ordered  instruction.out  my-graphs.ordered  my-graphs.out  simple.ordered  simple.out
t1/: .gitignore  matrix.py
t2/: CMakeLists.txt  prime_factor.cpp
t2/Question2/: pseudo-question2.cpp
t2/Question3/: q3 Answer.md  right.cpp
